tests/reject/tinc.nim
var x = 0

inc(x+1) #ERROR_MSG to var type a variable needs to be passed


